# OPC_UA_Client

./: .gitignore  CMakeLists.txt  README.md
client_ui/: CMakeLists.txt
client_ui/include/: client_ui.h  delay_spin_slider.h  exposure_spin_slider.h  gain_spin_slider.h  light_spin_slider.h  sys_tick.h
client_ui/src/: client_ui.cpp  client_ui.ui  delay_spin_slider.cpp  delay_spin_slider.ui  exposure_spin_slider.cpp  exposure_spin_slider.ui  gain_spin_slider.cpp  gain_spin_slider.ui  light_spin_slider.cpp  light_spin_slider.ui
connect_ui/: CMakeLists.txt
connect_ui/include/: connect_ui.h
connect_ui/src/: connect_ui.cpp  connect_ui.ui
font_icon/: CMakeLists.txt
font_icon/include/: font_icon.h
opcua_cs/: CMakeLists.txt
opcua_cs/include/asmpro/opcua_cs/: client.hpp
opcua_cs/src/: client.cpp
src/: main.cpp
ua_client/: CMakeLists.txt
ua_client/include/: ua_client.h
ua_client/src/: ua_client.cpp
